--- a/app/views/ideas_feedbacks/_form.html.haml
+++ b/app/views/ideas_feedbacks/_form.html.haml
@@ -1,4 +1,4 @@
-= semantic_form_for(IdeasFeedback.new, :url => supervision_ideas_feedback_path(@supervision)) do |f|
-  = f.inputs do
-    = f.input :content, :hint => t("supervisions.show.ideas_feedback_content_hint")
-  = f.buttons :commit
+= form_for(IdeasFeedback.new, :url => supervision_ideas_feedback_path(@supervision)) do |f|
+  = f.text_area :content
+  %p.inline-hints= t("ideas_feedbacks.form.content_hint")
+  = submit_tag t("ideas_feedbacks.form.submit")
