--- a/app/views/solutions/_form.html.haml
+++ b/app/views/solutions/_form.html.haml
@@ -1,6 +1,4 @@
-= semantic_form_for([@supervision, Solution.new]) do |f|
-  = f.inputs do
-    = f.input :content, :hint => t("supervisions.show.solution_content_hint")
-  = f.buttons do
-    = f.commit_button
-    %li= link_to t("supervisions.show.no_more_solutions"), supervision_votes_path(@supervision), :method => :post, :class => "discard"
+= form_for([@supervision, Solution.new]) do |f|
+  = f.text_area :content
+  %p.inline-hints= t("solutions.form.content_hint")
+  = submit_tag t("solutions.form.submit")
