--- a/app/views/solutions_feedbacks/_form.html.haml
+++ b/app/views/solutions_feedbacks/_form.html.haml
@@ -1,4 +1,4 @@
-= semantic_form_for(SolutionsFeedback.new, :url => supervision_solutions_feedback_path(@supervision)) do |f|
-  = f.inputs do
-    = f.input :content, :hint => t("supervisions.show.solutions_feedback_content_hint")
-  = f.buttons :commit
+= form_for(SolutionsFeedback.new, :url => supervision_solutions_feedback_path(@supervision)) do |f|
+  = f.text_area :content
+  %p.inline-hints= t("solutions_feedbacks.form.content_hint")
+  = submit_tag t("solutions_feedbacks.form.submit")
