--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,9 +1,10 @@
 %header
   %hgroup
-    %h1= link_to "Peergroup", root_path
+    %h1= link_to t(".title.peergroup", :default => "peergroup"), root_path
     %h2= @title
   %nav
-    = t(".welcome", :default => "Welcome %{user_name}", :user_name => current_user.name) if signed_in?
+    = t(".title.welcome", :default => "Welcome %{user_name}", :user_name => current_user.name) if signed_in? 
+    = t(".title.username", :default => "%{user_name}", :user_name => current_user.name) if signed_in?
     %ul
       %li= link_to t(".links.home", :default => "Home"), root_path
       - if signed_in?
