--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -1,5 +1,3 @@
-$content-columns: $blueprint-grid-columns - 2 - 6
-
 = supervision-header
   margin-top: 1.5em
   header
@@ -20,7 +18,7 @@ $content-columns: $blueprint-grid-columns - 2 - 6
 = supervision-item-small
   +supervision-item
   +user-gravatar-small
-  width: 31.3%
+  width: 48%
   margin-right: 1%
   margin-left: 1%
   float: left
@@ -110,6 +108,34 @@ $content-columns: $blueprint-grid-columns - 2 - 6
         padding: 0
 
 .supervision
+  .chat_room_part
+    overflow: auto
+    float: right
+    width: 30%
+    .chat_room
+    .messages_part
+      border: 1px solid $primary-color-1
+      height: 25em
+      overflow-y: scroll
+    .messages
+      +reset-list-style
+      +reset-box-model
+    .chat_message
+      .message-user
+        font-weight: bold
+      time
+        color: #888
+      &:nth-child(even)
+        background-color: #eee
+      &:nth-child(odd)
+        background-color: #ddd
+    #chat_message_content
+      +reset-box-model
+      border: 1px solid $primary-color-1
+      width: 80%
+      &:focus
+        +box_shadow($primary-color-2, 0, 0, 5px)
+
   footer
     clear: both
 
