--- a/app/views/supervisions/show.html.haml
+++ b/app/views/supervisions/show.html.haml
@@ -13,123 +13,138 @@
     %div{:"data-show-in-state" => "finished"}
       = render :partial => "supervision_finished"
 
-  %section.topics_part
-    %header
-      %h1= t("supervisions.show.topic")
+  %aside.chat_room_part
+    %div[@supervision.chat_room]{ :data => { :token => @token } }
+      %div.messages_part
+        %ul.messages
+          - @supervision.chat_room.chat_messages.limit(25).reverse_each do |chat_message|
+            %li[chat_message]
+              %span.message-user= chat_message.user
+              %time{ :datetime => chat_message.created_at.getutc.iso8601 }= chat_message.created_at.to_s
+              \:
+              %span.message-content= chat_message.content
+      = form_for(ChatMessage.new, :url => group_chat_room_chat_messages_path(@supervision.group, @supervision.chat_room), :remote => true) do |f|
+        = f.text_field :content
+        = submit_tag ">>"
 
-    .list
-      = render @supervision.topic
+  %div.supervision-content{:style => "width: 66%;float:left" }
+    %section.topics_part
+      %header
+        %h1= t("supervisions.show.topic")
 
-  %section.questions_part
-    %header
-      %h1= t("supervisions.show.questions")
+      .list
+        = render @supervision.topic
 
-    - unless @supervision.finished?
-      %div{:"data-show-in-state" => "asking_questions"}
-        %p.waiting= t("supervisions.show.questions_waiting")
+    %section.questions_part
+      %header
+        %h1= t("supervisions.show.questions")
 
-        - unless @supervision.problem_owner?(current_user)
-          .form.question
+      - unless @supervision.finished?
+        %div{:"data-show-in-state" => "asking_questions"}
+          %p.waiting= t("supervisions.show.questions_waiting")
+
+          - unless @supervision.problem_owner?(current_user)
+            .form.question
+              .user
+                = render current_user
+              .content
+                = render :partial => "questions/form"
+                = link_to t("supervisions.show.no_more_questions"), supervision_votes_path(@supervision), :method => :post, :class => "discard"
+
+      .list
+        = render @supervision.topic_questions
+
+    %section.ideas_part
+      %header
+        %h1= t("supervisions.show.ideas")
+
+      - unless @supervision.finished?
+        %div{:"data-show-in-state" => "providing_ideas"}
+          - if @supervision.problem_owner?(current_user)
+            %p.waiting= t("supervisions.show.problem_owner_ideas_waiting")
+          - else
+            %p.waiting= t("supervisions.show.ideas_waiting")
+            .form.idea
+              .user
+                = render current_user
+              .content
+                = render :partial => 'ideas/form'
+                = link_to t("supervisions.show.no_more_ideas"), supervision_votes_path(@supervision), :method => :post, :class => "discard"
+
+      .list
+        = render @supervision.ideas
+
+    %section.ideas_feedback_part
+      %header
+        %h1= t("supervisions.show.ideas_feedback")
+
+      - unless @supervision.finished?
+        %div{:"data-show-in-state" => "giving_ideas_feedback"}
+          - if @supervision.problem_owner?(current_user)
+            .form.ideas_feedback
+              .user
+                = render current_user
+              .content
+                = render :partial => 'ideas_feedbacks/form'
+          - else
+            %p.waiting= t("supervisions.show.ideas_feedback_waiting")
+
+      .list
+        = render @supervision.ideas_feedback if @supervision.ideas_feedback
+
+    %section.solutions_part
+      %header
+        %h1= t("supervisions.show.solutions")
+
+      - unless @supervision.finished?
+        %div{:"data-show-in-state" => "providing_solutions"}
+          - if @supervision.problem_owner?(current_user)
+            %p.waiting= t("supervisions.show.problem_owner_solutions_waiting")
+          - else
+            %p.waiting= t("supervisions.show.solutions_waiting")
+            .form.solution
+              .user
+                = render current_user
+              .content
+                = render :partial => 'solutions/form'
+                = link_to t("supervisions.show.no_more_solutions"), supervision_votes_path(@supervision), :method => :post, :class => "discard"
+
+      .list
+        = render @supervision.solutions
+
+    %section.solutions_feedback_part
+      %header
+        %h1= t("supervisions.show.solutions_feedback")
+
+      - unless @supervision.finished?
+        %div{:"data-show-in-state" => "giving_solutions_feedback"}
+          - if @supervision.problem_owner?(current_user)
+            .form.solutions_feedback
+              .user
+                = render current_user
+              .content
+                = render :partial => 'solutions_feedbacks/form'
+          - else
+            %p.waiting= t("supervisions.show.solutions_feedback_waiting")
+
+      .list
+        = render @supervision.solutions_feedback if @supervision.solutions_feedback
+
+    %section.supervision_feedbacks_part
+      %header
+        %h1= t("supervisions.show.supervision_feedbacks")
+
+      - unless @supervision.finished?
+        %div{:"data-show-in-state" => "giving_supervision_feedbacks"}
+          %p.waiting= t("supervisions.show.supervision_feedbacks_waiting")
+          .form.supervision_feedback
             .user
               = render current_user
             .content
-              = render :partial => "questions/form"
-              = link_to t("supervisions.show.no_more_questions"), supervision_votes_path(@supervision), :method => :post, :class => "discard"
+              = render :partial => 'supervision_feedbacks/form' unless @supervision.posted_supervision_feedback?(current_user)
 
-    .list
-      = render @supervision.topic_questions
-
-  %section.ideas_part
-    %header
-      %h1= t("supervisions.show.ideas")
-
-    - unless @supervision.finished?
-      %div{:"data-show-in-state" => "providing_ideas"}
-        - if @supervision.problem_owner?(current_user)
-          %p.waiting= t("supervisions.show.problem_owner_ideas_waiting")
-        - else
-          %p.waiting= t("supervisions.show.ideas_waiting")
-          .form.idea
-            .user
-              = render current_user
-            .content
-              = render :partial => 'ideas/form'
-              = link_to t("supervisions.show.no_more_ideas"), supervision_votes_path(@supervision), :method => :post, :class => "discard"
-
-    .list
-      = render @supervision.ideas
-
-  %section.ideas_feedback_part
-    %header
-      %h1= t("supervisions.show.ideas_feedback")
-
-    - unless @supervision.finished?
-      %div{:"data-show-in-state" => "giving_ideas_feedback"}
-        - if @supervision.problem_owner?(current_user)
-          .form.ideas_feedback
-            .user
-              = render current_user
-            .content
-              = render :partial => 'ideas_feedbacks/form'
-        - else
-          %p.waiting= t("supervisions.show.ideas_feedback_waiting")
-
-    .list
-      = render @supervision.ideas_feedback if @supervision.ideas_feedback
-
-  %section.solutions_part
-    %header
-      %h1= t("supervisions.show.solutions")
-
-    - unless @supervision.finished?
-      %div{:"data-show-in-state" => "providing_solutions"}
-        - if @supervision.problem_owner?(current_user)
-          %p.waiting= t("supervisions.show.problem_owner_solutions_waiting")
-        - else
-          %p.waiting= t("supervisions.show.solutions_waiting")
-          .form.solution
-            .user
-              = render current_user
-            .content
-              = render :partial => 'solutions/form'
-              = link_to t("supervisions.show.no_more_solutions"), supervision_votes_path(@supervision), :method => :post, :class => "discard"
-
-    .list
-      = render @supervision.solutions
-
-  %section.solutions_feedback_part
-    %header
-      %h1= t("supervisions.show.solutions_feedback")
-
-    - unless @supervision.finished?
-      %div{:"data-show-in-state" => "giving_solutions_feedback"}
-        - if @supervision.problem_owner?(current_user)
-          .form.solutions_feedback
-            .user
-              = render current_user
-            .content
-              = render :partial => 'solutions_feedbacks/form'
-        - else
-          %p.waiting= t("supervisions.show.solutions_feedback_waiting")
-
-    .list
-      = render @supervision.solutions_feedback if @supervision.solutions_feedback
-
-  %section.supervision_feedbacks_part
-    %header
-      %h1= t("supervisions.show.supervision_feedbacks")
-
-    - unless @supervision.finished?
-      %div{:"data-show-in-state" => "giving_supervision_feedbacks"}
-        %p.waiting= t("supervisions.show.supervision_feedbacks_waiting")
-        .form.supervision_feedback
-          .user
-            = render current_user
-          .content
-            = render :partial => 'supervision_feedbacks/form' unless @supervision.posted_supervision_feedback?(current_user)
-
-    .list
-      = render @supervision.supervision_feedbacks
+      .list
+        = render @supervision.supervision_feedbacks
 
   %footer
     %div{:"data-show-in-state" => "finished"}
