--- a/app/views/topics/index.html.haml
+++ b/app/views/topics/index.html.haml
@@ -11,10 +11,27 @@
             = submit_tag t("supervisions.show.supervision_state.#{state}"),  :title => t("supervisions.show.supervision_state_title.#{state}")
 
 
-  - if @supervision.gathering_topics?
-    = render :partial => "supervision_topics"
+  %aside.chat_room_part
+    %div[@supervision.chat_room]{ :data => { :token => @token } }
+      %div.messages_part
+        %ul.messages
+          - @supervision.chat_room.chat_messages.limit(25).reverse_each do |chat_message|
+            %li[chat_message]
+              %span.message-user= chat_message.user
+              %time{ :datetime => chat_message.created_at.getutc.iso8601 }= chat_message.created_at.to_s
+              \:
+              %span.message-content= chat_message.content
+      = form_for(ChatMessage.new, :url => group_chat_room_chat_messages_path(@supervision.group, @supervision.chat_room), :remote => true) do |f|
+        = f.text_field :content
+        = submit_tag ">>"
 
-  - if @supervision.voting_on_topics?
-    = render :partial => "supervision_topics_votes"
+  -# TODO fix it later
+  %div.supervision-content{ :style => "width:66%;float:left" }
+
+    - if @supervision.gathering_topics?
+      = render :partial => "supervision_topics"
+
+    - if @supervision.voting_on_topics?
+      = render :partial => "supervision_topics_votes"
 
   %footer
