--- a/app/views/groups/_group_brief.html.haml
+++ b/app/views/groups/_group_brief.html.haml
@@ -10,7 +10,7 @@
           = form_tag(group_membership_path(group, current_user.memberships.find_by_group_id(group.id)), :method => :delete) do
             = submit_tag t(".links.leave", :default => "leave")
         %li= link_to t(".links.session", :default => "Session"), new_group_supervision_path(group)
-        %li= link_to t(".links.chat", :default => "Chat"), group_chat_room_path(group.chat_room)
+        %li= link_to t(".links.chat", :default => "Chat"), group_chat_room_path(group)
         %li= link_to t(".links.edit", :default => "Edit"), edit_group_path(group.id)
         %li= link_to t(".links.delete", :default => "delete"), group_path(group.id), :method => :delete, :confirm => t(".confirmations.delete", :default => "You sure?")
       - else
