--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -12,5 +12,7 @@
 @import partials/form
 
 @import partials/supervision
+@import partials/chat_room
+
 @import partials/jquery.rating
 @import partials/jquery-ui
