--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -1,14 +1,15 @@
 - @title = t ".title", :group_name => @chat_room.group.name, :default => "%{group_name} Group Chat"
 
-%article
+%article.chat_room_part
   %div[@chat_room]{ :data => { :token => @token } }
-    %ul.messages
-      - @chat_messages.reverse_each do |chat_message|
-        %li[chat_message]
-          %span.user= chat_message.user
-          %time{ :datetime => chat_message.created_at.getutc.iso8601 }= chat_message.created_at.to_s
-          \:
-          %span.content= chat_message.content
+    .messages_part
+      %ul.messages
+        - @chat_messages.reverse_each do |chat_message|
+          %li[chat_message]
+            %span.message-user= chat_message.user
+            %time{ :datetime => chat_message.created_at.getutc.iso8601 }= chat_message.created_at.to_s
+            \:
+            %span.message-content= chat_message.content
     = form_for(ChatMessage.new, :url => group_chat_room_chat_messages_path(@group, @chat_room), :remote => true) do |f|
       = f.text_field :content
       = submit_tag t(".submit", :default => "Submit")
