Add scrolling chat messages functionality

--- a/app/stylesheets/partials/_chat_room.sass
+++ b/app/stylesheets/partials/_chat_room.sass
@@ -8,6 +8,7 @@
   .messages
     +reset-list-style
     +reset-box-model
+    position: relative
   .chat_message
     .message-user
       font-weight: bold
