Add flash notifications support in JS

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,8 +24,9 @@
       = render 'layouts/header'
 
       #content
-        - flash.each do |severity, message|
-          %div{:class => "flash #{severity}"}= message
+        .flash-messages
+          - flash.each do |severity, message|
+            %div{:class => "flash #{severity}"}= message
         = yield
       = render 'layouts/footer'
 
