Add dynamic flash notification for supervision session
 * Add flashnotification as jQuery UI widget for notifications
 * Use responder to set-up flashes on supervision models
 * Write missing specs for controllers in supervision session
 * Add translations for supervision flash notifications

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -97,22 +97,14 @@ a
     header
       +append-bottom
 
-  .flash
+  .flash-messages
     +prepend-top
     +push(1)
     +column($blueprint-grid-columns - 2, true)
-    &.success
-      color: $success-color
-      background-color: $success-bg-color
-      border: 2px solid $success-border-color
-    &.notice
-      color: $notice-color
-      background-color: $notice-bg-color
-      border: 2px solid $notice-border-color
-    &.error
-      color: $error-color
-      background-color: $error-bg-color
-      border: 2px solid $error-border-color
+    .notice
+      +success
+    .alert
+      +error
 
 .navigation
   clear: both
