Add blue frame around problem owner's avatar

--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -30,7 +30,7 @@
     img.gravatar
       border-color: transparent
       border-style: solid
-    &.problem_owner
+    &.problem-owner
       img.gravatar
         border-color: $primary-color-5
     a
