--- a/app/views/ideas_feedbacks/_ideas_feedback.html.haml
+++ b/app/views/ideas_feedbacks/_ideas_feedback.html.haml
@@ -1,4 +1,9 @@
 %div[ideas_feedback]
-  = render ideas_feedback.user
+  - user_classes = ["problem-owner"]
+  - user_classes << "you" if ideas_feedback.user == current_user
+  .user{ :class => user_classes.join(" ") }
+    = link_to ideas_feedback.user, :title => ideas_feedback.user do
+      = gravatar_for(ideas_feedback.user)
+      .name= ideas_feedback.user
   .content
     %p= ideas_feedback.content
