--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,4 +40,6 @@
           s.parentNode.insertBefore(script, s);
         })();
     = javascript_include_tag :defaults
+    :javascript
+      WEB_SOCKET_SWF_LOCATION = document.location.protocol + "//" + document.location.hostname + ":8080" + WEB_SOCKET_SWF_LOCATION;
 
