Remove duplicated translations in layout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html{:lang => "en"}
   %head
-    %title= t(".title", :default => "peergroup")
+    %title= title
     %meta{ :charset => "utf-8" }
     = csrf_meta_tag
     = javascript_meta_information
