--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -3,3 +3,8 @@
 
   - users_list(@group.members, @group.founder)
 
+  - if current_user.member_of?(@group)
+    %li= link_to t(".links.session", :default => "Session"), new_group_supervision_path(@group)
+    %li= link_to t(".links.chat", :default => "Chat"), group_chat_room_path(@group.chat_room)
+    %li= link_to t(".links.edit", :default => "Edit"), edit_group_path(@group.id)
+    %li= link_to t(".links.delete", :default => "delete"), group_path(@group.id), :method => :delete, :confirm => t(".confirmations.delete", :default => "You sure?")
