--- a/app/views/topics/index.html.haml
+++ b/app/views/topics/index.html.haml
@@ -21,7 +21,7 @@
               %time{ :datetime => chat_message.created_at.getutc.iso8601 }= chat_message.created_at.to_s
               \:
               %span.message-content= chat_message.content
-      = form_for(ChatMessage.new, :url => group_chat_room_chat_messages_path(@supervision.group, @supervision.chat_room), :remote => true) do |f|
+      = form_for([@supervision.chat_room, ChatMessage.new], :remote => true) do |f|
         = f.text_field :content
         = submit_tag ">>"
 
