--- a/app/views/topics/_supervision_topics_votes.html.haml
+++ b/app/views/topics/_supervision_topics_votes.html.haml
@@ -14,5 +14,5 @@
               .name= topic.user
           .content
             %p= topic_content(topic)
-            = form_for([@supervision, topic, Vote.new]) do |f|
+            = form_for([topic, Vote.new]) do |f|
               = f.submit t("topics.index.topic_vote"), :disabled => @supervision.voted_on_topic?(current_user)
