Replace instance with local variables, as RBP says

--- a/app/views/questions/_question.html.haml
+++ b/app/views/questions/_question.html.haml
@@ -11,4 +11,4 @@
       .answer
         .head
           %p= t(".post_answer", :default => "Your answer")
-        = render :partial => "answers/form", :locals => { :question => question }
+        = render "answers/form", :question => question
