--- a/app/views/answers/_form.html.haml
+++ b/app/views/answers/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for([@question, Answer.new]) do |f|
+= form_for([question, Answer.new]) do |f|
   = f.text_area :content
   %p.inline-hints= t("answers.form.content_hint")
   = submit_tag t("answers.form.submit")
