--- a/app/views/ideas/_form.html.haml
+++ b/app/views/ideas/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for([@supervision, Idea.new]) do |f|
+= form_for([supervision, Idea.new]) do |f|
   = f.text_area :content
   %p.inline-hints= t("ideas.form.content_hint")
   = submit_tag t("ideas.form.submit")
