--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for([@supervision, Question.new]) do |f|
+= form_for([supervision, Question.new]) do |f|
   = f.text_area :content
   %p.inline-hints= t("questions.form.content_hint")
   = submit_tag t("questions.form.submit")
