--- a/app/views/solutions/_form.html.haml
+++ b/app/views/solutions/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for([@supervision, Solution.new]) do |f|
+= form_for([supervision, Solution.new]) do |f|
   = f.text_area :content
   %p.inline-hints= t("solutions.form.content_hint")
   = submit_tag t("solutions.form.submit")
