--- a/app/views/topics/_supervision_topics_votes.html.haml
+++ b/app/views/topics/_supervision_topics_votes.html.haml
@@ -2,11 +2,11 @@
   %header
     %h1= t("supervisions.show.topic_votes")
 
-  - if @supervision.voting_on_topics?
+  - if supervision.voting_on_topics?
     %p.waiting= t("supervisions.show.topic_votes_waiting")
 
     .list
-      - @supervision.topics.each do |topic|
+      - supervision.topics.each do |topic|
         %div[topic]
           .user{ :class => ("you" if topic.user == current_user) }
             = link_to topic.user, :title => topic.user do
@@ -15,4 +15,4 @@
           .content
             %p= topic_content(topic)
             = form_for([topic, Vote.new]) do |f|
-              = f.submit t("topics.index.topic_vote"), :disabled => @supervision.voted_on_topic?(current_user)
+              = f.submit t("topics.index.topic_vote"), :disabled => supervision.voted_on_topic?(current_user)
