Add supervision membership
One big commit, refactoring and new functionality in one place, because
when I started to implement this functionality I found it would be
better to refactor code a little, and this "little" grow to really big
number of lines...

 * Add supervision membership, with callbacks for supervision state change
 * Refactor specs for supervision

--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -89,10 +89,10 @@
       border-right: 1px solid black
       border-top: 1px solid black
       border-bottom: 1px solid black
-      &.state
+      &.step
         padding: 0.5em 0.75em
         background-color: #e0e0ee
-      &.current_state
+      &.current_step
         background-color: #f0f0ff
       &:first-child
         +border-left-radius(5px)
