--- a/app/views/supervisions/index.html.haml
+++ b/app/views/supervisions/index.html.haml
@@ -19,6 +19,6 @@
     %ul
       - @current_supervisions.each do |supervision|
         %li
-          = link_to supervision_step_path(supervision) do
+          = link_to supervision_path(supervision) do
             = t(".supervision", :default => "group: %{group} - %{date}", :group => supervision.group_name, :date => l(supervision.updated_at, :format => :short))
           = supervision.topic_content
