--- a/app/views/topics/index.html.haml
+++ b/app/views/topics/index.html.haml
@@ -11,19 +11,26 @@
             = submit_tag t("supervisions.show.supervision_state.#{step}"),  :title => t("supervisions.show.supervision_state_title.#{step}")
 
 
-  %aside.chat_room_part
-    %div[@supervision.chat_room]{ :data => { :token => @token } }
-      %div.messages_part
-        %ul.messages
-          - @chat_messages.reverse_each do |chat_message|
-            %li[chat_message]
-              %span.message-user= chat_message.user
-              %time{ :datetime => chat_message.created_at.getutc.iso8601 }= chat_message.created_at.to_s
-              \:
-              %span.message-content= chat_message.content
-      = form_for([@supervision.chat_room, ChatMessage.new], :remote => true) do |f|
-        = f.text_field :content
-        = submit_tag ">>"
+  %aside
+    .members-part
+      %ul.members-list
+        - @supervision.members.each do |user|
+          %li[user]{:class => "supervision-member"}
+            = gravatar_for(user)
+            %span.name= user
+    .chat-room-part
+      %div[@supervision.chat_room]{ :data => { :token => @token } }
+        .messages_part
+          %ul.messages
+            - @chat_messages.reverse_each do |chat_message|
+              %li[chat_message]
+                %span.message-user= chat_message.user
+                %time{ :datetime => chat_message.created_at.getutc.iso8601 }= chat_message.created_at.to_s
+                \:
+                %span.message-content= chat_message.content
+        = form_for([@supervision.chat_room, ChatMessage.new], :remote => true) do |f|
+          = f.text_field :content
+          = submit_tag ">>"
 
   -# TODO fix it later
   %div.supervision-content{ :style => "width:66%;float:left" }
