--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,7 +4,7 @@
       = gravatar_for(@user)
       = @user.name
 
-  %h2= t(".group_list_title", :user_name => @user.name, :default => "%{user_name}'s Group List")
+  %h2= t(".group_list_title", :user_name => @user.name, :default => "My groups")
   %ul.groups
     - @user.groups.each do |group|
       %li= link_to(group_name(group, @user), group_path(group))
