Refactor redis keys and chat authorization for Node.js server

--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -1,6 +1,6 @@
 - @title = t ".title", :group_name => @chat_room.group.name, :default => "%{group_name} Group Chat"
 
-%article.chat_room_part
+%article.chat-room-part
   %div[@chat_room]{ :data => { :token => @token } }
     .messages_part
       %ul.messages
